--- a/about-gorana.html
+++ b/about-gorana.html
@@ -58,7 +58,7 @@
                         <li>Nicole Contreras</li>
                         <li>Chavdar Dobranov</li>
                         <li>Evgeni Dobranov</li>
-                        <li>Jianying Ho</li>
+                        <li>Jianying Hu</li>
                         <li>Elissaveta Iordanova</li>
                         <li>Iva Iordanova</li>
                         <li>Elena Miteva</li>
