Credits -> Orenda Credits

--- a/credits.html
+++ b/credits.html
@@ -33,7 +33,7 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h1>Credits</h1>
+							<h1>Orenda Credits</h1>
 						</header>
 				</section>
 
