Add yasna voices members

--- a/credits.html
+++ b/credits.html
@@ -94,8 +94,15 @@
 							<div class="content">
 								<h3>Singers</h3>
 								<ul>
-									<li>Vlada Tomova</li>
 									<li>Petya Maglova</li>
+								</ul>
+								<p style="margin:0 0 0 0;">Yasna Voices:</p>
+								<ul>
+									<li>Vlada Tomova (director)</li>
+									<li>Annie Beliveau</li>
+									<li>Mimi Berkova</li>
+									<li>Barbara Elting</li>
+									<li>Larkin Grimm</li>
 								</ul>
 							</div>
 						</article>
