--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 							away from Bulgaria.
 						</p>
 						<p>
-							On a professional level, we look for interdisciplenary links. On a personal level, we see
+							On a professional level, we look for interdisciplinary links. On a personal level, we see
 							our engagement in Bulgarian folk art not only as vital sharing of our artistic expression,
 							but also as a way to connect our roots with our new home in the US, helping young
 							Bulgarian-Americans born here build a relationship with their origins.
