--- a/lineup.html
+++ b/lineup.html
@@ -80,7 +80,7 @@
                                     Stage right: Galina, Emilia, Mihaela, Guergana</i></p>
                         </article>
                         <article>
-                            <h3>6. Songs from Vlada Tomova (Yasna Voices)</h3>
+                            <h3>6. Songs from Vlada Tomova / Yasna Voices</h3>
                             <ul>
                                 <li>Брала мома (A girl picking flowers)</li>
                                 <li>Кузум Еленке (Beautiful Elenke)</li>
@@ -110,7 +110,7 @@
                                     D., Virginiya</i></p>
                         </article>
                         <article>
-                            <h3>10. Songs from Vlada Tomova (Yasna Voices)</h3>
+                            <h3>10. Songs from Vlada Tomova / Yasna Voices</h3>
                             <ul>
                                 <li>Снощи си дойде (Last night he came back)</li>
                                 <li>Бачо Никола (Brother Nikola)</li>
@@ -171,7 +171,7 @@
                                 </i></p>
                         </article>
                         <article>
-                            <h3>18. Song from Hristo</h3>
+                            <h3>18. Song from Hristo Shehov</h3>
                             <ul>
                                 <li>Соньо, мой соньо (Sonyo, my sonyo)</li>
                             </ul>
@@ -224,7 +224,7 @@
                                     D., Virginiya</i></p>
                         </article>
                         <article>
-                            <h3>25. Songs from Petya Maglova</h3>
+                            <h3>25. Song from Petya Maglova</h3>
                             <ul>
                                 <li>Черешко чорна вишничко (Cherry, black cherry)</li>
                             </ul>
@@ -238,7 +238,7 @@
                                 </i></p>
                         </article>
                         <article>
-                            <h3>27. Songs from Vlada Tomova (Yasna Voices)</h3>
+                            <h3>27. Songs from Vlada Tomova / Yasna Voices</h3>
                             <ul>
                                 <li>Ерген Деда (Unmarried grandfather)</li>
                                 <li>Бре Петрунко (Oh Petrunko)</li>
