--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
 						<ul class="actions fit">
 							<li><a href="https://gorana-international-folk-dance-festival.ticketbud.com/orenda-the-collective-power"
-									target="_blank" class="button primary fit">Get Tickets</a></li>
-							<li><a href="lineup.html" class="button primary fit">See the lineup</a></li>
+									target="_blank" class="button primary fit">Get tickets</a></li>
+							<li><a href="lineup.html" class="button primary fit">See the line up</a></li>
 						</ul>
 					</div>
 					<span class="image object">
