--- a/about-gorana.html
+++ b/about-gorana.html
@@ -59,6 +59,7 @@
                         <li>Nicole Contreras</li>
                         <li>Chavdar Dobranov</li>
                         <li>Evgeni Dobranov</li>
+                        <li>Lily Grantcharova</li>
                         <li>Jianying Hu</li>
                         <li>Elissaveta Iordanova</li>
                         <li>Iva Iordanova</li>
@@ -81,8 +82,9 @@
                             <h2>Elissaveta Iordanova</h2>
                         </header>
                         <p>
-                            Eli is a dance artist and choreographer with professional experience, long-lasting interest
-                            & specialty in Bulgarian folk dance, and in-depth knowledge of Bulgarian folkloric heritage.
+                            Elissaveta is a dance artist and choreographer with professional experience, long-lasting
+                            interest & specialty in Bulgarian folk dance, and in-depth knowledge of Bulgarian folkloric
+                            heritage.
                         </p>
                         <p>
                             She is the founder, artistic director and choreographer of the Gorana Dance Collective,
@@ -90,7 +92,7 @@
                             of traditional folklore music & dance.
                         </p>
                         <p>
-                            Eli is a recipient of LMCC grants and her collective has also been supported by the
+                            Elissaveta is a recipient of LMCC grants and her collective has also been supported by the
                             Tienaderrah Foundation and private donors.
                         </p>
                     </div>
