--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>A note from Eli</h2>
+							<h2>A note from Elissaveta</h2>
 							<h4><i>Artistic Director, Producer & Choreographer</i></h4>
 						</header>
 						<p>
