--- a/about-gorana.html
+++ b/about-gorana.html
@@ -96,7 +96,7 @@
                             Tienaderrah Foundation and private donors.
                         </p>
                     </div>
-                    <span class="image object">
+                    <span class="image object profile2">
                         <img src="images/eli2.jpg" alt="" />
                     </span>
                 </section>
