--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 							Bulgarian-Americans born here build a relationship with their origins.
 						</p>
 					</div>
-					<span class="image object">
+					<span class="image object profile1">
 						<img src="images/eli1.jpg" alt="" />
 					</span>
 				</section>
