--- a/credits.html
+++ b/credits.html
@@ -91,6 +91,7 @@
 								<h3>Singers</h3>
 								<ul>
 									<li>Petya Maglova</li>
+									<li>Hristo Shehov</li>
 								</ul>
 								<p style="margin:0 0 0 0;">Yasna Voices:</p>
 								<ul>
