--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 							<li><a href="lineup.html" class="button primary fit">See the line up</a></li>
 						</ul>
 					</div>
-					<span class="image object">
+					<span class="image object profile0">
 						<img src="images/gorana1.jpg" alt="" />
 					</span>
 				</section>
