--- a/about-guest-artists.html
+++ b/about-guest-artists.html
@@ -48,8 +48,7 @@
                             Vlada is the founder of New York's first Bulgarian Women's Choir, Yasna Voices. Together,
                             they have presented full length a cappella concerts, showcasing village songs and
                             arrangements in the style of
-                            <a href="https://www.youtube.com/playlist?list=OLAK5uy_n9yg2yxV-5qM6alw4Qwt9NVVGHTp1NshY"
-                                target="_blank">
+                            <a href="https://www.youtube.com/playlist?list=OLAK5uy_n9yg2yxV-5qM6alw4Qwt9NVVGHTp1NshY">
                                 <i>Le Mystère des Voix Bulgares</i>
                             </a>
                             (The Mystery of the Bulgarian Voices), a compilation of folk songs by the Bulgarian State
@@ -59,10 +58,12 @@
                             Vlada's voice is featured on National Geographic's touring exhibit King Tut, and was heard
                             in the sound installation "Echoes from the Mountains" at the 2006 Winter Olympics in Italy.
                         </p>
+
                         <ul class="actions fit">
-                            <li><a href="https://vladatomovamusic.com/" target="_blank" class="button fit">Vlada's
-                                    Site</a></li>
+                            <li><a href="https://vladatomovamusic.com/" class="button primary fit">Vlada's Site</a></li>
                         </ul>
+                        <p><br></p>
+
                         <span class="image fit yasna">
                             <img src="images/yasna.jpg" alt="" />
                         </span>
@@ -118,7 +119,7 @@
                         </p>
                     </div>
 
-                    <span class="image object">
+                    <span class="image object" style="height:100%;max-height:none;">
                         <img src="images/lubo.jpg" alt="" />
                     </span>
                 </section>
@@ -145,6 +146,10 @@
                             Traditions, and many more.
                         </p>
                     </div>
+
+                    <span class="image object" style="height:100%;max-height:none;">
+                        <img src="images/hristo.jpg" alt="" />
+                    </span>
                 </section>
             </div>
         </div>
