Fix spellings and formatting

--- a/about-algara.html
+++ b/about-algara.html
@@ -25,24 +25,23 @@
 
                 <!-- Header -->
                 <header id="header">
-                    <a href="index.html" class="logo"><strong>Gorana Dance</strong></a>
                     <span><img src="images/logo.jpg" alt="" /></span>
                 </header>
 
                 <!-- Content -->
                 <section>
                     <header class="main">
-                        <h2>About Algara Dance</h2>
+                        <h2>About Algara Folk Dance Group</h2>
                     </header>
                     <p>
-                        Algara Dance is a Bulgarian folk dance collective founded in 2018 by Galina Saharova and a group
-                        of enthusiastic Bulgarian women living in New Jersey. The group's goal is to present their
-                        appreciation of Bulgarian folk traditions to larger audiences.
+                        Algara Folk Dance Group is a Bulgarian folk dance collective founded in 2018 by Galina Saharova
+                        and a group of enthusiastic Bulgarian women living in New Jersey. The group's goal is to present
+                        their appreciation of Bulgarian folk traditions to larger audiences.
                     </p>
                     <p>
                         Galina began dancing in Bulgaria in her adolescent years and performed in numerous concerts and
-                        festivals with the "Gadularche" company. She is the choreographer of Algara's repertoire as well
-                        as a dancer in both Algara Dance and Gorana Dance.
+                        festivals with the "Guslarche" company. She is the choreographer of Algara's repertoire as well
+                        as a dancer in both Algara Folk Dance Group and GORANA DANCE.
                     </p>
 
                     <span class="image main"><img src="images/algara.jpg" alt="" /></span>
@@ -93,7 +92,7 @@
                             </ul>
                         </li>
                         <li><a href="gallery.html">Gallery</a></li>
-                        <li><a href="performances.html">Past Performances</a></li>
+                        <li><a href="trailers.html">Trailers</a></li>
                     </ul>
                 </nav>
 
