--- a/about-gorana.html
+++ b/about-gorana.html
@@ -25,28 +25,26 @@
 
                 <!-- Header -->
                 <header id="header">
-                    <a href="index.html" class="logo"><strong>Gorana Dance</strong></a>
                     <span><img src="images/logo.jpg" alt="" /></span>
                 </header>
 
                 <!-- Content -->
                 <section>
                     <header class="main">
-                        <h2>About Gorana Dance</h2>
+                        <h2>About GORANA DANCE</h2>
                     </header>
                     <p>
-                        Gorana Dance is a Bulgarian folk dance collective founded in 2006 by Elissaveta Iordanova. The
+                        GORANA DANCE is a Bulgarian folk dance collective founded in 2006 by Elissaveta Iordanova. The
                         collective's style is characterized by lively energy, swift steps and exciting interpretation of
                         the traditional Bulgarian folk dance form.
                     </p>
                     <p>
-                        Gorana Dance's mission is presenting Bulgarian folk dance art, making connections with
-                        communities beyond the Bulgarian one, collaborating with Bulgarian & intercultural folk artists,
-                        and serving as a cultural ambassador while being a vital part of the multicultural tapestry of
-                        NYC.
+                        Its mission is presenting Bulgarian folk dance art, making connections with communities beyond
+                        the Bulgarian one, collaborating with Bulgarian & intercultural folk artists, and serving as a
+                        cultural ambassador while being a vital part of the multicultural tapestry of NYC.
                     </p>
                     <p>
-                        Gorana Dance has been presenting annual concerts for 10+ years and performing on different
+                        GORANA DANCE has been presenting annual concerts for 10+ years and performing on different
                         occassions like festivals in the greater NYC, New Jersey, Pennsylvania and Chicago areas.
                     </p>
 
@@ -65,6 +63,7 @@
                         <li>Iva Iordanova</li>
                         <li>Elena Miteva</li>
                         <li>Inna Ognianova-Chorlev</li>
+                        <li>Nadia Petkova</li>
                         <li>Venci Petkova</li>
                         <li>Emilia Pironkova</li>
                         <li>Maria Pironkova</li>
@@ -87,7 +86,7 @@
                             heritage.
                         </p>
                         <p>
-                            She is the founder, artistic director and choreographer of the Gorana Dance Collective,
+                            She is the founder, artistic director and choreographer of the GORANA DANCE Collective,
                             uniting several generations of Bulgarian and American dancers around the captivating power
                             of traditional folklore music & dance.
                         </p>
@@ -126,7 +125,7 @@
                             </ul>
                         </li>
                         <li><a href="gallery.html">Gallery</a></li>
-                        <li><a href="performances.html">Past Performances</a></li>
+                        <li><a href="trailers.html">Trailers</a></li>
                     </ul>
                 </nav>
 
