--- a/about-guest-artists.html
+++ b/about-guest-artists.html
@@ -25,7 +25,6 @@
 
                 <!-- Header -->
                 <header id="header">
-                    <a href="index.html" class="logo"><strong>Gorana Dance</strong></a>
                     <span><img src="images/logo.jpg" alt="" /></span>
                 </header>
 
@@ -79,7 +78,7 @@
                 <section id="banner">
                     <div class="content">
                         <header>
-                            <h3>Petya Maglova</h3>
+                            <h3>Petya Maglova-Shehova</h3>
                         </header>
                         <p>
                             Petya was born and raised in Plovdiv and started taking Bulgarian folklore lessons at the
@@ -115,7 +114,7 @@
                             (large gaida), a bagpipe instrument from the central Rhodope mountains.
                         </p>
                         <p>
-                            Lubo has been a frequent guest artist in Gorana Dance's concerts.
+                            Lubo has been a frequent guest artist in GORANA DANCE's concerts.
                         </p>
                     </div>
 
@@ -176,7 +175,7 @@
                             </ul>
                         </li>
                         <li><a href="gallery.html">Gallery</a></li>
-                        <li><a href="performances.html">Past Performances</a></li>
+                        <li><a href="trailers.html">Trailers</a></li>
                     </ul>
                 </nav>
 
