--- a/credits.html
+++ b/credits.html
@@ -25,7 +25,6 @@
 
 				<!-- Header -->
 				<header id="header">
-					<a href="index.html" class="logo"><strong>Gorana Dance</strong></a>
 					<span><img src="images/logo.jpg" alt="" /></span>
 				</header>
 
@@ -42,16 +41,17 @@
 					<div class="features">
 						<article>
 							<div class="content">
-								<h3>Gorana Dance</h3>
+								<h3>GORANA DANCE</h3>
 								<ul>
 									<li>Nicole Contreras</li>
 									<li>Chavdar Dobranov</li>
 									<li>Evgeni Dobranov</li>
 									<li>Jianying Hu</li>
-									<li>Elissaveta Iordanova</li>
+									<li>Elissaveta Iordanova (Choreographer)</li>
 									<li>Iva Iordanova</li>
 									<li>Elena Miteva</li>
 									<li>Inna Ognianova-Chorlev</li>
+									<li>Nadia Petkova</li>
 									<li>Venci Petkova</li>
 									<li>Emilia Pironkova</li>
 									<li>Maria Pironkova</li>
@@ -59,13 +59,12 @@
 									<li>Tina Stoyanova</li>
 									<li>Guergana Stoyantcheva</li>
 									<li>Mihaela Stoyantcheva</li>
-									<li>Petya Yankova</li>
 								</ul>
 							</div>
 						</article>
 						<article>
 							<div class="content">
-								<h3>Algara Dance</h3>
+								<h3>Algara Folk Dance Group</h3>
 								<ul>
 									<li>Maria Bonevelly</li>
 									<li>Albena Chernaeva</li>
@@ -76,7 +75,7 @@
 									<li>Galina Natchev</li>
 									<li>Vessela Patchedjieva</li>
 									<li>Maria Rosenberg</li>
-									<li>Galina Saharova</li>
+									<li>Galina Saharova (Choreographer)</li>
 									<li>Iskra Simidchieva</li>
 									<li>Ioana Spiridonov</li>
 									<li>Toska Stoianova</li>
@@ -90,12 +89,12 @@
 							<div class="content">
 								<h3>Singers</h3>
 								<ul>
-									<li>Petya Maglova</li>
+									<li>Petya Maglova-Shehova</li>
 									<li>Hristo Shehov</li>
 								</ul>
-								<p style="margin:0 0 0 0;">Yasna Voices:</p>
+								<p style="margin:0 0 0 0; color:black; font-weight:bold;">Yasna Voices:</p>
 								<ul>
-									<li>Vlada Tomova (director)</li>
+									<li>Vlada Tomova (Director)</li>
 									<li>Annie Beliveau</li>
 									<li>Mimi Berkova</li>
 									<li>Barbara Elting</li>
@@ -148,7 +147,7 @@
 							<div class="content">
 								<h3>Video Editing</h3>
 								<ul>
-									<li>Manuel Inanez</li>
+									<li>Manuel Ibanez</li>
 								</ul>
 							</div>
 						</article>
@@ -163,11 +162,12 @@
 						</article>
 						<article>
 							<div class="content">
-								<h3>Costume Design</h3>
+								<h3>Costumes / Props</h3>
 								<ul>
-									<li>Emilia Pironkova (large wreath design & production)</li>
-									<li>Guergana Stoyantcheva (small head wreath decor)</li>
-									<li>Elissaveta Iordanova (head decor)</li>
+									<li>Lily Grantcharova (Costume Assistant)</li>
+									<li>Emilia Pironkova (Large Wreath Design & Production)</li>
+									<li>Guergana Stoyantcheva (Small Head Wreath Decor)</li>
+									<li>Elissaveta Iordanova (Head Decor)</li>
 								</ul>
 							</div>
 						</article>
@@ -216,7 +216,7 @@
 							</ul>
 						</li>
 						<li><a href="gallery.html">Gallery</a></li>
-						<li><a href="performances.html">Past Performances</a></li>
+						<li><a href="trailers.html">Trailers</a></li>
 					</ul>
 				</nav>
 
