--- a/gallery.html
+++ b/gallery.html
@@ -25,7 +25,6 @@
 
                 <!-- Header -->
                 <header id="header">
-                    <a href="index.html" class="logo"><strong>Gorana Dance</strong></a>
                     <span><img src="images/logo.jpg" alt="" /></span>
                 </header>
 
@@ -91,7 +90,7 @@
                             </ul>
                         </li>
                         <li><a href="gallery.html">Gallery</a></li>
-                        <li><a href="performances.html">Past Performances</a></li>
+                        <li><a href="trailers.html">Trailers</a></li>
                     </ul>
                 </nav>
 
