--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<p>
 							Orenda: The Collective Power is a concert showcasing the beauty of traditional Bulgarian
 							heritage, vibrant folk dances and popular folk songs. This concert is a celebration of the
-							15<sup>th</sup> Anniversary of Gorana Dance, and features 35 dancers and 7 singers /
+							15<sup>th</sup> Anniversary of GORANA DANCE, and features 30 dancers and 7 singers /
 							musicians.
 						</p>
 						<p>
@@ -116,7 +116,7 @@
 							</ul>
 						</li>
 						<li><a href="gallery.html">Gallery</a></li>
-						<li><a href="performances.html">Past Performances</a></li>
+						<li><a href="trailers.html">Trailers</a></li>
 					</ul>
 				</nav>
 
