--- a/lineup.html
+++ b/lineup.html
@@ -129,8 +129,8 @@
                                     Venci</i></p>
                         </article>
                         <article>
-                            <h3>12. Северняшки Сюита (Severniashki Suite)</h3>
-                            <p style="color:black;">A dance from Bulgaria's northern region ("severniashki" translates
+                            <h3>12. Северняшка Сюита (Severniashkа Suite)</h3>
+                            <p style="color:black;">A dance from Bulgaria's northern region ("severniashkа" translates
                                 to "northern").</p>
                             <p><i>Stage left: Chavdar, Inna, Emilia, Tina, Mihaela
                                     <br>
@@ -210,7 +210,7 @@
                         <article>
                             <h3>22. Song from Lubomir Smilenov</h3>
                             <ul>
-                                <li style="color:black;">Раченица (Rachenitsa)</li>
+                                <li style="color:black;">Ръченица (Ruchenitsa)</li>
                             </ul>
                         </article>
                         <article>
@@ -256,7 +256,7 @@
                         <article>
                             <h3>28. Songs from Vlada Tomova / Yasna Voices</h3>
                             <ul>
-                                <li style="color:black;">Ерген Деда (Unmarried grandfather)</li>
+                                <li style="color:black;">Ерген Деда (Bachelor grandpa)</li>
                                 <li style="color:black;">Бре Петрунко (Oh Petrunko)</li>
                                 <li style="color:black;">Яна иде (Yana is coming)</li>
                             </ul>
