--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 						<p>
 							Orenda: The Collective Power is a concert showcasing the beauty of traditional Bulgarian
 							heritage, vibrant folk dances and popular folk songs. This concert is a celebration of the
-							15<sup>th</sup> Anniversary of GORANA DANCE, and features 30 dancers and 8 singers /
-							musicians.
+							<strong>15<sup>th</sup> Anniversary of GORANA DANCE</strong>, and features 30 dancers and 8
+							singers / musicians.
 						</p>
 						<p>
 							Orenda is the Iroquois name for a certain spiritual energy inherent to people and their
