--- a/lineup.html
+++ b/lineup.html
@@ -274,7 +274,7 @@
                             <h3>30. Край Шоплука (Kray Shopluka)</h3>
                             <p style="color:black;">A dance from the Shopski region in western Bulgaria, close to the
                                 capital of Sofia.</p>
-                            <p><i>1<sup>st</sup> row: Evgeni, Venci, Elena, Tsvetina, Galina, Inna, Mihaela
+                            <p><i>1<sup>st</sup> row: Evgeni, Venci, Elena, Galina, Inna, Mihaela, Tsvetina
                                     <br>
                                     2<sup>nd</sup> row: Chavdar, Emilia, Guergana, Iva, Jianying, Mariya, Nicole
                                 </i></p>
