--- a/credits.html
+++ b/credits.html
@@ -167,7 +167,10 @@
 									<li>Emilia Pironkova (Large Wreath Design & Production)</li>
 									<li>Guergana Stoyantcheva (Small Head Wreath Decor)</li>
 									<li>Elissaveta Iordanova (Head Decor)</li>
+									<li>Galina Saharova (Head Decor)</li>
 								</ul>
+								<p><i>Special thank you to the Hristo Botev Bulgarian school for allowing us to use some
+										of their costumes.</i></p>
 							</div>
 						</article>
 						<article>
