--- a/credits.html
+++ b/credits.html
@@ -128,6 +128,14 @@
 						</article>
 						<article>
 							<div class="content">
+								<h3>Sound and Light</h3>
+								<ul>
+									<li>Shino Frances</li>
+								</ul>
+							</div>
+						</article>
+						<article>
+							<div class="content">
 								<h3>Photography</h3>
 								<ul>
 									<li>Blagovest Petkov</li>
@@ -156,6 +164,14 @@
 								<ul>
 									<li>Margarita Markova</li>
 									<li>Aneta Genova</li>
+								</ul>
+							</div>
+						</article>
+						<article>
+							<div class="content">
+								<h3>Technical Support Assistant</h3>
+								<ul>
+									<li>Lily Grantcharova</li>
 								</ul>
 							</div>
 						</article>
