Add donation link

--- a/about-guest-artists.html
+++ b/about-guest-artists.html
@@ -189,6 +189,10 @@
                                 href="https://www.facebook.com/goranadance">facebook.com/goranadance</a></li>
                         <li class="icon solid fa-envelope"><a href="mailto:eleadance@yahoo.com">eleadance@yahoo.com</a>
                         </li>
+                        <li class="icon solid fa-hand-holding-heart"><a
+                                href="https://app.thefield.org/profile/Elissaveta-Iordanova-ELEA-GORANA-DANCE-COLLECTIVE/550476">Donate
+                                to the collective</a>
+                        </li>
                     </ul>
                 </section>
 
