Formatting tweaks and add line up

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 							<h1>Roses Across The Sea</h1>
 							<p>
 								<br>
-								<strong>Roses Across The Sea</strong> is a live performance of Bulgarian and Georgian folk dances as
-								part of the 6<sup>th</sup> GORANA International Dance festival. The rose is the national flower of both
+								<strong>Roses Across The Sea</strong> is a live performance of Bulgarian and Georgian folk dances & songs
+								as part of the 6<sup>th</sup> GORANA International Dance festival. The rose is the national flower of both
 								Bulgaria and Georgia, as well as the state flower of New York. Roses will be an integrative part of
 								the performance as decoration and props in some dances.
 							</p>
@@ -50,7 +50,7 @@
 							<p>
 								In everything from mythology and literature to religion and politics, the rose has been prized for its beauty
 								and continues to be strongly associated as the most symbolically rich flower. The red rose is the queen of all
-								roses with its symbolism for passion, deep desire and romantic love going back to ancient times. The white rose is
+								roses with its symbolism for passion, deep desire and romantic love dating back to ancient times. The white rose is
 								associated with reverence, truth and new beginnings like marriage. The pink rose is associated with admiration,
 								gentleness, elegance, sweetness and happiness.
 							</p>
@@ -61,14 +61,10 @@
 								pink and showers guests with petals. As a rule, the holiday ends in the late evening with a big "horo" line dance
 								in which everyone takes part.
 							</p>
-							<p>
-								<i>Thank you to the Lower Manhattan Cultural Council Creative Engagement funds, Tianaderrah Foundation,
-								and private donors for the great support in the past 5 years!</i>
-							</p>
 							
 						</div>
 
-						<div class="col-6 col-12-small" style="display:flex; align-items: center;">
+						<div class="col-6 col-12-small" style="display:flex; align-items:center;">
 							<img src="images/rose.jpg" style="max-width:60%; margin-left: auto; margin-right: auto; margin-bottom: 40px;" alt="" />
 							<p>&nbsp;</p>
 						</div>
@@ -87,7 +83,7 @@
 						</div>
 
 						<div class="col-4 col-12-medium"></div>
-						<div class="col-4 col-12-medium">
+						<div class="col-4 col-12-medium" style="text-align:center;">
 							<ul class="actions fit">
 								<li>
 									<a href="https://gorana-international-folk-dance-festival.ticketbud.com/gorana-sixth-int-l-dance-festival-roses-across-the-sea-"
@@ -97,6 +93,11 @@
 									<a href="program.html" class="button primary fit">See the program</a>
 								</li>
 							</ul>
+
+							<p>
+								<i>Thank you to the Lower Manhattan Cultural Council Creative Engagement funds, Tianaderrah Foundation,
+								and private donors for the great support in the past 5 years!</i>
+							</p>
 						</div>
 						<div class="col-4 col-12-medium"></div>
 
@@ -104,17 +105,21 @@
 
 				</section>
 
-				<!-- Banner -->
-				<section id="banner">
-					<div class="content">
-						<header>
-							<h2>A note from Elissaveta</h2>
-							<h4><i>Artistic Director, Producer & Choreographer</i></h4>
-						</header>
+				<section>
+				<div class="row">
+					<div class="col-6 col-12-small" style="display:flex; align-items:center;">
+						<img src="images/eli1.jpg" style="max-width:80%; margin-left: auto; margin-right: auto; margin-bottom: 40px;" alt="" />
+						<p>&nbsp;</p>
+					</div>
+
+					<div class="col-6 col-12-small">
+						<h2>A note from Elissaveta</h2>
+						<h4><i>Artistic Director, Producer & Choreographer</i></h4>
+
 						<p>
-							Each performer in Roses Across The Sea holds a passion, in his or her own way, for exploring
-							the new meanings and relevance of traditional practices in our contemporary world thousands
-							of miles away from Bulgaria.
+							Each performer in <strong>Roses Across The Sea</strong> holds a passion, in his or her own way,
+							for exploring the new meanings and relevance of traditional practices in our contemporary world
+							thousands of miles away from Bulgaria.
 						</p>
 						<p>
 							On a professional level, we look for interdisciplinary links. On a personal level, we see
@@ -123,10 +128,9 @@
 							Bulgarian-Americans born here build a relationship with their origins.
 						</p>
 					</div>
-					<span class="image object profile1">
-						<img src="images/eli1.jpg" alt="" />
-					</span>
+				</div>
 				</section>
+
 			</div>
 		</div>
 
