--- a/orenda.html
+++ b/orenda.html
@@ -154,7 +154,7 @@
                         <p><i>Nadia (Solo)</i></p>
                     </div>
                     <span class="image object">
-                        <img src="images/nadia.jpg" alt="" />
+                        <img src="images/nadia.jpg" style="max-width:60%; margin-left: auto; margin-right: auto; margin-bottom: 40px;" alt="" />
                     </span>
                 </section>
 
