--- a/credits.html
+++ b/credits.html
@@ -46,7 +46,7 @@
 									<li>Mariya Dimitrova</li>
 									<li>Chavdar Dobranov</li>
 									<li>Evgeni Dobranov</li>
-									<li>Angelike Glogov</li>
+									<li>Angelika Glogov</li>
 									<li>Jianying Hu</li>
 									<li>Elissaveta Iordanova (Choreographer)</li>
 									<li>Assia Mihov</li>
