--- a/credits.html
+++ b/credits.html
@@ -69,16 +69,17 @@
 							<div class="content">
 								<h3>Dancing Crane Georgian Dance</h3>
 								<ul>
-									<li>IIlia Svianaidze</li>
-									<li>Levan Torchinava</li>
+									<li>Ilia Svianaidze </li>
+									<li>Levan Torchinava </li>
 									<li>Malkhaz Shubitidze</li>
-									<li>Tengo Qobalia</li>
-									<li>Irakli Parcvania</li>
+									<li>Girogi Alimbarashvili </li>
+									<li>Tengiz Qobalia</li>
 									<li>Nana Davitadze</li>
 									<li>Sofiko Alania</li>
-									<li>Tamar Tsivilashvili</li>
-									<li>Natali Dabrundashvili</li>
-									<li>Keso Golitiani</li>
+									<li>Evelina Alimbarashvili </li>
+									<li>Tamar Tsivilashvili </li>
+									<li>Natalia Dabrundashvili </li>
+									<li>Keso Goleteani </li>
 									<li>Elene Machavariani</li>
 								</ul>
 
@@ -122,9 +123,10 @@
 
 						<article>
 							<div class="content">
-								<h3>House Managers</h3>
+								<h3>House Managers & Ticket Check-In</h3>
 								<ul>
 									<li>Aneta Genova</li>
+									<li>Margarita Markova</li>
 								</ul>
 							</div>
 						</article>
@@ -134,6 +136,24 @@
 								<h3>AV Director</h3>
 								<ul>
 									<li>Matt Temkin</li>
+								</ul>
+							</div>
+						</article>
+
+						<article>
+							<div class="content">
+								<h3>Lights</h3>
+								<ul>
+									<li>Mike Taylor</li>
+								</ul>
+							</div>
+						</article>
+
+						<article>
+							<div class="content">
+								<h3>Sound</h3>
+								<ul>
+									<li>Keaton Comiskey</li>
 								</ul>
 							</div>
 						</article>
@@ -160,7 +180,7 @@
 							<div class="content">
 								<h3>Videographer & Video Editor</h3>
 								<ul>
-									<li>Oscar Heredia / Novastar Media</li>
+									<li>Oscar Heredia / Nova Star Media</li>
 								</ul>
 							</div>
 						</article>
