--- a/program.html
+++ b/program.html
@@ -254,8 +254,9 @@
                         </article>
 
                         <article>
-                            <h3>21. A Georgian song by Sofiko Alania</h3>
+                            <h3>21. Lagundi</h3>
                             <p>
+                                A Georgian song by Sofiko Alania.
                             </p>
                         </article>
 
