--- a/program.html
+++ b/program.html
@@ -247,7 +247,7 @@
                         </article>
 
                         <article>
-                            <h3>20. Acharuli</h3>
+                            <h3>20. Apxazuri</h3>
                             <p>
                                 A Georgian dance by Dancing Crane.
                             </p>
