Update Galina text

--- a/about-algara.html
+++ b/about-algara.html
@@ -65,10 +65,10 @@
                 <h2>Galina Saharova</h2>
               </header>
               <p>
-                Galina's dance experience comes from dancing with her children's group in her town
-                of Gorna Oryahovitsa in Bulgaria. She joined GORANA DANCE in 2010 as a dancer before
-                becoming Elissaveta's assistant folk dance teacher. Together, they taught K-12
-                Bulgarian-American students.
+                Galina's dance experience comes from dancing and performing with her children's
+                group "Guslarche" in her town of Gorna Oryahovitsa in Bulgaria. She joined GORANA
+                DANCE in 2010 as a dancer before becoming Elissaveta's assistant folk dance teacher.
+                Together, they taught K-12 Bulgarian-American students.
               </p>
               <p>
                 In 2018, Galina took over teaching the student group and also founded the Algara
