Fix Galina picture spacing

--- a/about-algara.html
+++ b/about-algara.html
@@ -76,7 +76,7 @@
                 dancer in both Algara and GORANA DANCE.
               </p>
             </div>
-            <span class="image object profile2">
+            <span class="image object" style="height: 100%; max-height: none">
               <img src="images/galina.jpg" alt="" />
             </span>
           </section>
